<resources>
    <string name="app_name">DinDongAlarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_login">Login</string>

    <!--Variables del fragmento de Login-->
    <string name="IconoLogin">Icono del login</string>
    <string name="TitleLogin">Ding Dong Alarm</string>
    <string name="GoogleButton">Boton de Google</string>
    <string name="FacebookButton">Boton de facebook para logearse</string>
    <string name="TwitterButton">Twitter button login</string>
    <string name="textVinculo">Conectar version web</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleElegirCuenta">Elegir Cuenta</string>
    <string name="SubTitleElegirCuenta">Para ir a Ding Dong Alarm</string>
    <string name="filtrar_por_tipo">Filtrar por tipo</string>
    <string name="TituloAlarmasDescription">Título de la lista de alarmas</string>
    <string name="textoAlarma">ALARMAS</string>
    <string name="textoAlarma2">Alarma</string>
    <string name="textolist1">Reunion semanal de equipo</string>
    <string name="textSalir">Salir</string>
    <string name="txt_nuevaAlarma_titulo">NUEVA ALARMA</string>
    <string name="txt_nuevaAlarma_grupoAlarma">Grupo de Alarma</string>
    <string name="txt_nuevaAlarma_cancelar">Cancelar</string>
    <string name="txt_nuevaAlarma_guardar">Guardar</string>
    <string name="txt_nuevaAlarma_nombre">Nombre</string>
    <string name="txt_nuevaAlarma_repetir">Repetir</string>
    <string name="txt_nuevaAlarma_todosDias">Todos los días</string>
    <string name="txt_nuevaAlarma_sonido">Sonido</string>
    <string name="txt_nuevaAlarma_acciones">Acciones</string>
    <string name="txt_nuevaAlarma_lun">Lun</string>
    <string name="txt_nuevaAlarma_mar">Mar</string>
    <string name="txt_nuevaAlarma_mie">Mie</string>
    <string name="txt_nuevaAlarma_jue">Jue</string>
    <string name="txt_nuevaAlarma_vie">Vie</string>
    <string name="txt_nuevaAlarma_sab">Sab</string>
    <string name="txt_nuevaAlarma_dom">Dom</string>
    <string name="txt_nuevaAccion_titulo">NUEVA ACCIÓN</string>
    <string name="txt_nuevaAccion_accionesDisponibles">Acciones disponibles</string>
    <string name="txt_nuevaAccion_listadoAcciones">Listado de acciones</string>

</resources>